recursion.cons.lessons.recursion.cons.Length.scala.code
def length(l:List[Int]): Int = {
	return lengh
}
